--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <a href"https://github.com/wilaniepajalla/ryanrimando/blob/main/RYAN%20RIMANDO.pdf"></a>  
+  <p font-size="14"><a href="RYAN%20RIMANDO.pdf">Click here</a></p>
 </html>
